Adjusted alignment / margins of various elements to line up correctly.

--- a/index.css
+++ b/index.css
@@ -131,7 +131,7 @@ table {
 
 .content {
   height: 100%;
-  width: 60%;
+  width: 40%;
   margin: auto;
 }
 
@@ -188,20 +188,20 @@ header {
 
 h1 {
   font-family: Chelsea Market;
+  text-align: right;
   font-size: 2.2rem;
   padding-top: 2.5rem;
   padding-bottom: 1.5rem;
-  padding-right: 2rem;
-  padding-left: 1.7rem;
+  margin-left: 1.7rem;
 }
 
 img.header-image {
   border-radius: 50%;
+  margin-left: 5.5rem;
+  margin-right: 2rem;
+  /* object-fit: cover; */
 }
 
-div.header-copy {
-  padding-left: 1rem;
-}
 
 p.p1 {
   padding-bottom: 1rem;
@@ -223,25 +223,33 @@ div {
   font-family: Roboto mono;
 }
 
+.break {
+  height: 1rem;
+}
+
 .main-text {
   background-color: #ddb9a3;
   color: white; 
-  font-size: .8rem;
+  font-size: .9rem;
   padding-top: .5rem;
   padding-bottom: .5rem;
   padding-right: 2rem;
   padding-left: 2rem;
-  letter-spacing: 0.1em;
   line-height: 1.5em;
   text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
 }
 
 .fire-p, .rv-p {
   text-align: center;
-  width: 19rem;
-  padding-left: 15.5rem;
-  padding-top: 1rem;
-  padding-bottom: 4rem;
+  font-size: .8rem;
+  width: 12rem;
+  margin-left: 17.5rem;
+  margin-top: 1rem;
+  margin-bottom: 4rem;
 }
 
 .fire-image, .rv-image {
@@ -258,8 +266,13 @@ footer {
 }
 
 img.footer-image {
- 
+  height: 12rem;
+  width: 100%;
+}
+
+.footer-image {
   object-fit: cover;
+  
 }
 
 
@@ -269,4 +282,6 @@ img.footer-image {
   font-family: Roboto mono;
   display: flex;
   justify-content: space-evenly;
+  margin-top: 1rem;
+  padding-bottom: 1rem;
 }
